# icpro

./: .env.example  .gitignore  README.md  dashboard_app.py  monitor_app.py  pyproject.toml  requirements.lock.txt
.streamlit/: config.toml
configs/backtest/: cc_eth_12m.yaml  (+63 more)
deploy/: monitor-dashboard.env.example  monitor-dashboard.service  setup.sh  trader-dashboard.env.example  trader-dashboard.service  trader-engine.env.example  trader-engine.service
docs/: PROJECT_STRUCTURE.md  requirements_design.md  本地缓存小时级快速回测指南.md
monitor/: __init__.py  app.py  exchanges.py
scripts/: README.md  __init__.py  _analyze_curve.py  _dte7_atm.py  _dte7_delta_hedge.py  _test_api.py  analyze_k2.py  analyze_losses.py  analyze_results.py  backtest_weekend_vol.py  btc_0dte_wings_grid.py  btc_atm_dte7.py  btc_atm_dte_grid.py  btc_dte_otm_grid.py  btc_tp80_sl_grid.py  build_hourly_parquet.py  bybit_cc_recommender_panel.py  cdd_download_0dte.py  cdd_secrets.py  check_original_backtest.py  compare_cc_nc.py  compare_cc_nc_12m.py  compare_cc_nc_v2.py  compare_dte_otm.py  compare_grid.py  compare_hedged_unhedged.py  compare_ic_midpoint.py  compare_naked_vs_ic.py  compare_otm.py  compare_settlement_day.py  compare_wing_width.py  debug_atm_trades.py  diagnose_dte5_vs_7.py  diagnose_dte7_roll.py  diagnose_eth_tp80_w4.py  diagnose_eth_wings_dd.py  download_cdd_data.py  download_cdd_smart.py  eth_0dte_wings_grid.py  eth_atm_dte_grid.py  (+26 more)
tests/: test_binance_client.py  test_bybit_client.py  test_dashboard_expiry.py  test_engine.py  test_limit_chaser.py  test_strategy.py  test_trader.py  test_trader_config.py  test_trader_engine.py  test_trader_position_manager.py  test_trader_preview.py  test_trader_storage.py  test_trader_strategy.py
tmp/: backtest_layered_delta_natural_monthly_compound.py  scan_independent_7of6_vote_count_delta_layers.py
trader/: __init__.py  binance_client.py  config.py  dashboard.py  dashboard_expiry.py  deribit_client.py  engine.py  equity.py  limit_chaser.py  main.py  order_preview.py  position_manager.py  storage.py  strategy.py
(+136 files in other folders)
