[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-backtest"
version = "0.1.0"
description = "Bybit options strategy backtesting & auto-trading system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "polars>=1.36",
    "numpy>=1.24",
    "scipy>=1.10",
    "aiohttp>=3.13.4",
    "pyarrow>=12.0",
    "plotly>=5.15",
    "pydantic>=2.0",
    "loguru>=0.7",
    "click>=8.0",
    "tqdm>=4.65",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]
trader = [
    "streamlit>=1.37,<2.0",
    "requests>=2.33.0",
    "pandas>=2.0",
    "plotly>=5.15",
    "pyyaml>=6.0",
    "loguru>=0.7",
]

[project.scripts]
options-bt = "options_backtest.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
